--- a/26/tr.html
+++ b/26/tr.html
@@ -54,8 +54,8 @@
                                     <tr>
                                         <td
                                             style="font-size: 15px;line-height: 25px;color: #ffffff;text-align: center;padding: 24px 24px;text-align: center;">
-                                            <font style="font-size: 28px;line-height: 40px;">Dünyadan Metaverse Haberleri</font><br>
-                                            Oasis Labs, Yapay Zeka Çalışmaları için Meta ile Anlaştı
+                                            <font style="font-size: 28px;line-height: 40px;text-align: left;">Dünyadan Metaverse Haberleri</font><br>
+                                            <p class="title">Oasis Labs, Yapay Zeka Çalışmaları için Meta ile Anlaştı</p>
                                             <p>
                                                 Blockchain ve kripto sektörü tüm hızıyla büyümeye devam ederken her gün yeni bir ortaklık görmeye devam ediyoruz. Son olarak Blockchain ve Web3 uygulamalarına yönelik bulut hizmeti sunan Oasis Labs, yapay zeka çalışmaları için Meta ile anlaştığını duyurdu.
 
@@ -69,7 +69,7 @@ Son olarak da Oasis Labs ile anlaşan Meta, tüm dünyadaki insanların yaşamla
                                         <td style="padding-bottom: 24px;">
                                             
                                                 <table cellpadding="0" cellspacing="0" border="0"
-                                                style="width:592px;border-spacing: 0;border-collapse: collapse;margin: 0 auto;background-color:#523BA8;border-radius: 10px;">
+                                                style="width:592px;border-spacing: 0;border-collapse: collapse;margin: 0 auto;border-radius: 10px;">
                                                     <tr>
                                                         <td style="padding: 16px 16px;">
                                                             <img src="https://tazefikirmetaverse.com/mailing/2022/26/tr/2.png" width="560" height="304" style="width:560px;height:304px;display:inline-block">
@@ -77,7 +77,7 @@ Son olarak da Oasis Labs ile anlaşan Meta, tüm dünyadaki insanların yaşamla
                                                     </tr>
                                                     <tr>
                                                         <td style="padding: 0 16px 16px;font-size: 15px;line-height: 25px;color: #ffffff;">
-                                                        <strong style="font-size:22px;">Xiaomi, Blockchain Tabanlı Sanal Karakterler İçin Patent Aldı</strong><br>
+                                                        <strong class="title">Xiaomi, Blockchain Tabanlı Sanal Karakterler İçin Patent Aldı</strong><br>
                                                         Akıllı telefon denildiğinde akla ilk gelen şirketlerden biri olan Xiaomi, orijinal dijital karakterlerin üretimini sağlayacak Blockchain teknolojisini kullanan bir patent
 için başvuruda bulundu.<br><br>
 
@@ -94,7 +94,7 @@ Blockchain, verimli özellikleri ve merkeziyetsiz doğası sayesinde birçok şi
                                         <td style="padding-bottom: 24px;">
                                             
                                                 <table cellpadding="0" cellspacing="0" border="0"
-                                                style="width:592px;border-spacing: 0;border-collapse: collapse;margin: 0 auto;background: rgba(106, 86, 179, 0.3);border-radius: 10px;">
+                                                style="width:592px;border-spacing: 0;border-collapse: collapse;margin: 0 auto;border-radius: 10px;">
                                                     <tr>
                                                         <td style="padding: 16px 16px;">
                                                             <img src="https://tazefikirmetaverse.com/mailing/2022/26/tr/3.png" width="560" height="329" style="width:560px;height:329px;display:inline-block">
@@ -102,7 +102,7 @@ Blockchain, verimli özellikleri ve merkeziyetsiz doğası sayesinde birçok şi
                                                     </tr>
                                                     <tr>
                                                         <td style="padding: 0 16px 16px;font-size: 15px;line-height: 25px;color: #ffffff;">
-                                                        <strong style="font-size:22px;">HTC, Metaverse’te 3D Anime Avatar Oluşturmak İçin Pixiv
+                                                        <strong class="title">HTC, Metaverse’te 3D Anime Avatar Oluşturmak İçin Pixiv
                                                             ile Ortak Oldu</strong><br>
                                                             Tayvan merkezli akıllı telefon ve sanal gerçeklik gözlüğü üreticisi HTC, Metaverse’te 
                                                             3D anime avatar oluşturmak için yeni bir iş ortaklığı yaptı.<br><br>
@@ -117,7 +117,7 @@ Blockchain, verimli özellikleri ve merkeziyetsiz doğası sayesinde birçok şi
                                     <tr>
                                         <td style="padding-bottom: 100px;">
                                                 <table cellpadding="0" cellspacing="0" border="0"
-                                                style="width:592px;border-spacing: 0;border-collapse: collapse;margin: 0 auto;background-color:#523BA8;border-radius: 10px;">
+                                                style="width:592px;border-spacing: 0;border-collapse: collapse;margin: 0 auto;border-radius: 10px;">
                                                     <tr>
                                                         <td style="padding: 16px 16px;">
                                                             <img src="https://tazefikirmetaverse.com/mailing/2022/26/tr/4.png" width="560" height="329" style="width:560px;height:329px;display:inline-block">
@@ -131,7 +131,7 @@ Blockchain, verimli özellikleri ve merkeziyetsiz doğası sayesinde birçok şi
                                         <tr  style="margin-top:25px;">
                                             <td style="padding-bottom: 24px;">
                                                 <table cellpadding="0" cellspacing="0" border="0"
-                                                style="width:592px;border-spacing: 0;border-collapse: collapse;margin: 0 auto;background-color:#523BA8;border-radius: 10px;">
+                                                style="width:592px;border-spacing: 0;border-collapse: collapse;margin: 0 auto;border-radius: 10px;background-color: #523BA8;">
                                                 <tr>
                                                     <hr class="hr">
                                                     <td style="padding: 16px 16px;">
@@ -145,6 +145,15 @@ Blockchain, verimli özellikleri ve merkeziyetsiz doğası sayesinde birçok şi
                                                                         top: 0px;
                                                                         color: #6b54c5;
                                                                         margin-top: -8%;
+                                                                    }
+
+                                                                    .title{
+                                                                        font-family: 'Arial';
+                                                                        font-style: normal;
+                                                                        font-weight: 700;
+                                                                        text-align: left;
+                                                                        font-size: 16px;
+                                                                        line-height: 38px;
                                                                     }
                                                                 .kutu{
                                                                   box-sizing: border-box;
