--- a/26/tr.html
+++ b/26/tr.html
@@ -54,7 +54,7 @@
                                     <tr>
                                         <td
                                             style="font-size: 15px;line-height: 25px;color: #ffffff;text-align: center;padding: 24px 24px;text-align: center;">
-                                            <font style="font-size: 28px;line-height: 40px;text-align: left;">Dünyadan Metaverse Haberleri</font><br>
+                                            <font style="font-size: 35px;line-height: 40px;font-weight: 700;">Dünyadan Metaverse Haberleri</font><br><br>
                                             <p class="title">Oasis Labs, Yapay Zeka Çalışmaları için Meta ile Anlaştı</p>
                                             <p>
                                                 Blockchain ve kripto sektörü tüm hızıyla büyümeye devam ederken her gün yeni bir ortaklık görmeye devam ediyoruz. Son olarak Blockchain ve Web3 uygulamalarına yönelik bulut hizmeti sunan Oasis Labs, yapay zeka çalışmaları için Meta ile anlaştığını duyurdu.
@@ -77,7 +77,7 @@ Son olarak da Oasis Labs ile anlaşan Meta, tüm dünyadaki insanların yaşamla
                                                     </tr>
                                                     <tr>
                                                         <td style="padding: 0 16px 16px;font-size: 15px;line-height: 25px;color: #ffffff;">
-                                                        <strong class="title">Xiaomi, Blockchain Tabanlı Sanal Karakterler İçin Patent Aldı</strong><br>
+                                                        <strong class="title">Xiaomi, Blockchain Tabanlı Sanal Karakterler İçin Patent Aldı</strong><br><br>
                                                         Akıllı telefon denildiğinde akla ilk gelen şirketlerden biri olan Xiaomi, orijinal dijital karakterlerin üretimini sağlayacak Blockchain teknolojisini kullanan bir patent
 için başvuruda bulundu.<br><br>
 
@@ -103,7 +103,7 @@ Blockchain, verimli özellikleri ve merkeziyetsiz doğası sayesinde birçok şi
                                                     <tr>
                                                         <td style="padding: 0 16px 16px;font-size: 15px;line-height: 25px;color: #ffffff;">
                                                         <strong class="title">HTC, Metaverse’te 3D Anime Avatar Oluşturmak İçin Pixiv
-                                                            ile Ortak Oldu</strong><br>
+                                                            ile Ortak Oldu</strong><br><br>
                                                             Tayvan merkezli akıllı telefon ve sanal gerçeklik gözlüğü üreticisi HTC, Metaverse’te 
                                                             3D anime avatar oluşturmak için yeni bir iş ortaklığı yaptı.<br><br>
                                                             
@@ -136,7 +136,9 @@ Blockchain, verimli özellikleri ve merkeziyetsiz doğası sayesinde birçok şi
                                                     <hr class="hr">
                                                     <td style="padding: 16px 16px;">
                                                             <style>
-                                         
+                                                                    p{
+                                                                        text-align: left!important;
+                                                                    }
                                                                     .hr{
                                                                         width: 592px;
                                                                         height: 3px!important;
