--- a/26/tr.html
+++ b/26/tr.html
@@ -57,7 +57,7 @@
                                             <font style="font-size: 35px;line-height: 40px;font-weight: 700;">Dünyadan Metaverse Haberleri</font><br><br>
                                             <p class="title">Oasis Labs, Yapay Zeka Çalışmaları için Meta ile Anlaştı</p>
                                             <p>
-                                                Blockchain ve kripto sektörü tüm hızıyla büyümeye devam ederken her gün yeni bir ortaklık görmeye devam ediyoruz. Son olarak Blockchain ve Web3 uygulamalarına yönelik bulut hizmeti sunan Oasis Labs, yapay zeka çalışmaları için Meta ile anlaştığını duyurdu.
+                                                Blockchain ve kripto sektörü tüm hızıyla büyümeye devam ederken her gün yeni bir ortaklık görmeye devam ediyoruz. Son olarak Blockchain ve Web3 uygulamalarına yönelik bulut hizmeti sunan Oasis Labs, yapay zeka çalışmaları için Meta ile anlaştığını duyurdu.<br><br>
 
 Meta, adını değiştirerek Metaverse alanında milyarlarca dolar zarar etmesine rağmen 
 Varlığını sürdürdü ve fark alanlarda da çalışma alanlarını genişletti. 
