--- a/26/tr.html
+++ b/26/tr.html
@@ -59,8 +59,7 @@
                                             <p>
                                                 Blockchain ve kripto sektörü tüm hızıyla büyümeye devam ederken her gün yeni bir ortaklık görmeye devam ediyoruz. Son olarak Blockchain ve Web3 uygulamalarına yönelik bulut hizmeti sunan Oasis Labs, yapay zeka çalışmaları için Meta ile anlaştığını duyurdu.<br><br>
 
-Meta, adını değiştirerek Metaverse alanında milyarlarca dolar zarar etmesine rağmen 
-Varlığını sürdürdü ve fark alanlarda da çalışma alanlarını genişletti. 
+Meta, adını değiştirerek Metaverse alanında milyarlarca dolar zarar etmesine rağmen varlığını sürdürdü ve fark alanlarda da çalışma alanlarını genişletti. <br>
 Son olarak da Oasis Labs ile anlaşan Meta, tüm dünyadaki insanların yaşamlarını olumlu yönde etkilemeyi ve topluma fayda sağlamayı amaç edinen bir AI (Yapay Zeka) modeli için adalet sistemi geliştirecek.
                                             </p>
                                         </td>
