--- a/26/eng.html
+++ b/26/eng.html
@@ -39,7 +39,7 @@
                                                     </td>
                                                     <td
                                                         style="font-size: 13px;letter-spacing:0.4px;color:#ffffff;text-align:right;">
-                                                        Metafikir Bülteni Sayı <span
+                                                        Metafikir Newsletter <span
                                                             style="border:solid 1px #ffffff;border-radius:100%;padding: 10px 9px;margin-left: 8px;font-size: 18px;">26</span>
                                                     </td>
                                                 </tr>
