--- a/26/eng.html
+++ b/26/eng.html
@@ -269,11 +269,11 @@ Blockchain is starting to appear in the new product designs of many companies, t
                                                                           Organizations
                                                                         </div>
                                                                         <div class="kutu2" style="height: 80px;">
-                                                                          <img src="https://tazefikirmetaverse.com/mailing/shared/check.png">Decentraland, Sandbox &<br>
+                                                                          <img src="https://tazefikirmetaverse.com/mailing/shared/check.png">Decentraland, Sandbox &
                                                                           OVR Counseling
                                                                         </div>
-                                                                        <div class="kutu2" style="height: 80px;">
-                                                                          <img src="https://tazefikirmetaverse.com/mailing/shared/check.png">Account Services and<br>
+                                                                        <div class="kutu2" style="height: 100px;">
+                                                                          <img src="https://tazefikirmetaverse.com/mailing/shared/check.png">Account Services and
                                                                           Counseling for Executives
                                                                         </div>
                                                                         <div class="kutu2" style="height: 80px;">
