--- a/26/eng.html
+++ b/26/eng.html
@@ -57,11 +57,11 @@
                                             <font style="font-size: 35px;line-height: 40px;font-weight: 700;">Metaverse News from the World </font><br><br>
                                             <p class="title">Oasis Labs and Meta Partnership for Artificial Intelligence Studies</p>
                                             <p>
-                                                As the blockchain and crypto industry continues to grow at full speed, we continue to see a new partnership every day.Finally, Oasis Labs, which provides cloud services for Blockchain and Web3 applications, announcestheir partnership with Meta for artificial intelligence studies.<br><br>
+                                                As the blockchain and crypto industry continues to grow at full speed, we continue to see a new partnership every day. Finally, Oasis Labs, which provides cloud services for <b>Blockchain</b> and <b>Web3</b> applications, announcestheir partnership with Meta for artificial intelligence studies.<br><br>
 
                                                 Despite losing billions of dollars in the Metaverse space by changing its name to Meta,
                                                 The brand still continues its existence and expanded working areas in different areas.<br>
-                                                Finally, Meta, who has made an agreement with Oasis Labs, will develop a justice system for an AI (Artificial Intelligence) model that aims to positively affect the lives of people all over the world and benefit society.
+                                                Finally, Meta, who has made an agreement with Oasis Labs, will develop a <b>justice system</b> for an AI (Artificial Intelligence) model that aims to positively affect the lives of people all over the world and benefit society.
                                                 
                                             </p>
                                         </td>
@@ -84,7 +84,7 @@ Hasapplied for a patent using blockchain technology that will enable the product
 <br><br>
 
 According to China-based data technology company Tianyancha, the patent called 
-“Virtual Character Processing Method, Device and Storage Media” was announced lastJanuary.The company statestheir work to obtain this patent in a short time.
+<b>“Virtual Character Processing Method, Device and Storage Media”</b> was announced lastJanuary.The company statestheir work to obtain this patent in a short time.
 <br><br>
 
 Blockchain is starting to appear in the new product designs of many companies, thanks to its efficient features and decentralized nature. Virtual characters with different images can be produced with different gene sequencing technology in the patent.
@@ -108,7 +108,7 @@ Blockchain is starting to appear in the new product designs of many companies, t
                                                         <td style="padding: 0 16px 16px;font-size: 15px;line-height: 25px;color: #ffffff;">
                                                         <strong class="title">HTC Partners with Pixiv to Create 3D Anime Avatars in Metaverse</strong><br><br>
                                                         Taiwan-based smartphone and virtual reality glasses manufacturer HTC is on Metaverse
-                                                        witha new partnership to create 3D anime avatars.<br><br>
+                                                        witha new partnership to create <b>3D anime avatars.</b><br><br>
                                                             
                                                         HTC has announced that they will be working with a Japan-based virtual artist community platform to create a Japanese anime-style 3D avatar on Metaverse platform VIVERSE.
                                                         </td>
