--- a/26/eng.html
+++ b/26/eng.html
@@ -84,7 +84,7 @@ Hasapplied for a patent using blockchain technology that will enable the product
 <br><br>
 
 According to China-based data technology company Tianyancha, the patent called 
-<b>“Virtual Character Processing Method, Device and Storage Media”</b> was announced lastJanuary.The company statestheir work to obtain this patent in a short time.
+<b>“Virtual Character Processing Method, Device and Storage Media”</b> was announced last January. The company statestheir work to obtain this patent in a short time.
 <br><br>
 
 Blockchain is starting to appear in the new product designs of many companies, thanks to its efficient features and decentralized nature. Virtual characters with different images can be produced with different gene sequencing technology in the patent.
